<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInActivity"
    android:orientation="vertical"
    android:background="@color/fistache">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/carob"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="80dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/carob"
            android:text="@string/input_email"
            android:textSize="18sp"/>
        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:hint="@string/email"
            android:textSize="14sp"
            android:textColorHint="@color/matcha"
            android:textColor="@color/black"
            android:background="@drawable/input"
            android:padding="10dp"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/carob"
            android:text="@string/input_name"
            android:textSize="18sp"
            android:layout_marginTop="20dp"/>
        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:hint="@string/name"
            android:textSize="14sp"
            android:textColorHint="@color/matcha"
            android:textColor="@color/black"
            android:background="@drawable/input"
            android:padding="10dp"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/carob"
            android:text="@string/input_password"
            android:textSize="18sp"
            android:layout_marginTop="20dp"/>
        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:hint="@string/password"
            android:textSize="14sp"
            android:textColorHint="@color/matcha"
            android:textColor="@color/black"
            android:background="@drawable/input"
            android:padding="10dp"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/carob"
            android:text="@string/input_role"
            android:textSize="18sp"
            android:layout_marginTop="20dp"/>
        <Spinner
            android:id="@+id/role"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/input"
            android:padding="10dp"/>

    </LinearLayout>

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginTop="80dp"
        android:text="@string/login"
        android:textAllCaps="false"
        android:background="@drawable/btn_cta"
        android:textColor="@color/vanilla"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"/>




</LinearLayout>